--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,11 +3,9 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 unbind C-b
 set -g mouse on
 set-option -g prefix C-a
-set-option -g status-position top
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 set -g base-index 1
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
@@ -19,3 +17,22 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'dracula/tmux'
+
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, network, network-bandwidth, network-ping, weather, time
+set -g @dracula-plugins "cpu-usage ram-usage network-bandwidth network-ping weather time"
+set -g @dracula-show-powerline false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-flags true
+set -g @dracula-refresh-rate 5
+set -g @dracula-border-contrast true
+set -g @dracula-show-timezone false
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
