add polybar file system module

--- a/leftwm/.config/leftwm/themes/dracula/polybar/modules.config
+++ b/leftwm/.config/leftwm/themes/dracula/polybar/modules.config
@@ -80,7 +80,7 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 format-packetloss = <label-packetloss>
 
-format-connected-prefix = ""
+format-connected-prefix = " "
 format-connected-prefix-foreground = ${color.green}
 label-connected = "%{T3}%downspeed:8%%{T-}"
 label-connected-foreground = ${color.foreground}
@@ -114,7 +114,7 @@ label = "%{T3} %gb_used% / %percentage_used%%%{T-}"
 type = internal/temperature
 interval = 1.0
 thermal-zone = 0
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input
 units = true
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
@@ -134,3 +134,18 @@ type = custom/script
 ;exec-if = pgrep -x nm-applet
 exec = nm-applet --indicator 2>&1 > /dev/null &
 tail = true
+
+[module/filesystem]
+type = internal/fs
+mount-0 = /
+interval = 60
+fixed-values = true
+format-mounted = <label-mounted>
+format-mounted-prefix = "%{T3}%{T-}"
+format-mounted-prefix-foreground = ${color.pink}
+format-unmounted = <label-unmounted>
+format-unmounted-prefix = "%{T3}%{T-}"
+format-unmounted-prefix-foreground = ${color.red}
+label-mounted = "%{T3} %free% %percentage_used%%%{T-}"
+label-unmounted = " %mountpoint%: NA"
+
