--- a/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
+++ b/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
@@ -42,7 +42,7 @@ font-0 = "Fira Code NF:size=11:weight=bold;4"
 font-1 = "Fira Code NF:size=9:weight=bold;4"
 font-2 = "Fira Code NF:size=8:weight=bold;3"
 modules-center = date
-modules-right = network sep memory sep cpu sep temperature sep pulseaudio sep sysmenu sep nm-applet
+modules-right = network sep memory sep cpu sep filesystem sep temperature sep pulseaudio sep sysmenu 
 
 enable-ipc = true
 
