update polybar theme

--- a/leftwm/.config/leftwm/themes/dracula/polybar/themes/dracula.config
+++ b/leftwm/.config/leftwm/themes/dracula/polybar/themes/dracula.config
@@ -1,12 +1,51 @@
-;; Modules
+[dracula/color]
+background = #282a36
+current-line = #44475a
+foreground = #f8f8f2
+comment = #6272a4
+cyan = #8be9fd
+green = #50fa7b
+orange = #ffb86c 
+pink = #ff79c6 
+purple = #bd93f9
+red = #ff5555 
+yellow = #f1fa8c 
+
+
+[dracula/bar]
+width = 100% 
+monitor = ${env:monitor}
+offset-x = 0
+offset-y = 0
+height = 24
+fixed-center = true
+bottom = false
+locale = pt_BR.UTF-8
+background = ${dracula/color.current-line}
+foreground = ${dracula/color.foreground}
+radius-top = 0.0
+radius-bottom = 2.0
+font-0 = "Fira Code NF:size=11:weight=bold;4"
+font-1 = "Fira Code NF:size=9:weight=bold;4"
+font-2 = "Fira Code NF:size=8:weight=bold;3"
+font-3 = "Fira Code NF:size=8:weight=bold;3"
+font-4 = "Fira Code NF:size=8:weight=bold;3"
+padding = 2
+module-margin-left = 0
+module-margin-right = 0
+modules-left =
+modules-center = date
+modules-right = network sep memory sep cpu sep filesystem sep temperature sep pulseaudio sep sysmenu 
+enable-ipc = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; Modules
 
 [module/sep]
 type = custom/text
 content = "%{T3}%{T-}"
-;content-background = ${theme.comment}
-content-foreground = ${theme.background}
+;content-background = ${dracula/color.comment}
+content-foreground = ${dracula/color.background}
 content-padding = 1
 
 
@@ -15,15 +54,10 @@ content-padding = 1
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = false
-
 format-volume = <ramp-volume>
-
-;label-volume = %percentage%%
-
 label-muted = ﱝ
-label-muted-foreground = ${theme.comment}
+label-muted-foreground = ${dracula/color.comment}
 label-muted-font = 5
-
 ramp-volume-0 = "%{F#ff79c6}"
 ramp-volume-1 = "%{F#ff79c6}"
 ramp-volume-2 = "%{F#ff79c6}" 
@@ -34,35 +68,29 @@ ramp-volume-3 = "%{F#ff79c6}"
 [module/date]
 type = internal/date
 interval = 1.0
-
 time = %A, %d-%m-%Y %H:%M
-
 format = <label>
 format-prefix = " " 
-format-prefix-foreground = ${theme.pink}
-format-foreground = ${theme.foreground}
+format-prefix-foreground = ${dracula/color.pink}
+format-foreground = ${dracula/color.foreground}
 label = "%{T3}%time%%{T-}"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/activity]
 type = custom/text
-
 content = "Applications"
-content-foreground = ${theme.foreground}
-
-click-left = rofi -no-config -no-lazy-grab -show drun -theme $HOME/.config/leftwm/themes/current/polybar/rofi/launcher.rasi
-click-right = rofi -no-config -no-lazy-grab -show drun -theme $HOME/.config/leftwm/themes/current/polybar/rofi/launcher.rasi
+content-foreground = ${dracula/color.foreground}
+click-left = rofi -no-config -no-lazy-grab -show drun -dracula/color.$HOME/.config/leftwm/dracula/color./current/polybar/rofi/launcher.rasi
+click-right = rofi -no-config -no-lazy-grab -show drun -dracula/color.$HOME/.config/leftwm/dracula/color./current/polybar/rofi/launcher.rasi
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/sysmenu]
 type = custom/text
-
 content = "襤"
 content-font = 5
-content-foreground = ${theme.pink}
-
+content-foreground = ${dracula/color.pink}
 click-left = $SCRIPTPATH/polybar/rofi/powermenu.sh
 click-right = $SCRIPTPATH/polybar/rofi/powermenu.sh
 
@@ -71,21 +99,18 @@ click-right = $SCRIPTPATH/polybar/rofi/powermenu.sh
 [module/network]
 type = internal/network
 interface = enp4s0
-
 interval = 1.0
 accumulate-stats = true
 unknown-as-up = true
-
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 format-packetloss = <label-packetloss>
-
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${theme.green}
+format-connected-prefix-foreground = ${dracula/color.green}
 label-connected = "%{T3}%downspeed:8%%{T-}"
-label-connected-foreground = ${theme.foreground}
+label-connected-foreground = ${dracula/color.foreground}
 label-disconnected = " "
-label-disconnected-foreground = ${theme.red}
+label-disconnected-foreground = ${dracula/color.red}
 label-packetloss = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -95,7 +120,7 @@ type = internal/cpu
 interval = 1
 format = <label>
 format-prefix = ""
-format-prefix-foreground = ${theme.pink}
+format-prefix-foreground = ${dracula/color.pink}
 label = "%{T3} %percentage:2%%%{T-}"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -105,7 +130,7 @@ type = internal/memory
 interval = 1
 format = <label>
 format-prefix = ""
-format-prefix-foreground = ${theme.pink}
+format-prefix-foreground = ${dracula/color.pink}
 label = "%{T3} %gb_used% / %percentage_used%%%{T-}"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -118,22 +143,16 @@ hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
 units = true
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
-label-foreground = ${theme.foreground}
+label-foreground = ${dracula/color.foreground}
 label = "%{T3}%temperature-c%%{T-}"
 warn-temperature = 70
 label-warn = "%{T3}%temperature-c%%{T-}"
-label-warn-foreground = ${theme.red}
+label-warn-foreground = ${dracula/color.red}
 ramp-0 = "%{F#6272a4}%{F-}"
 ramp-1 = "%{F#ff79c6}%{F-}"
 ramp-2 = "%{F#ff5555}%{F-}"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/nm-applet]
-type = custom/script
-;exec-if = pgrep -x nm-applet
-exec = nm-applet --indicator 2>&1 > /dev/null &
-tail = true
 
 [module/filesystem]
 type = internal/fs
@@ -142,10 +161,10 @@ interval = 60
 fixed-values = true
 format-mounted = <label-mounted>
 format-mounted-prefix = "%{T3}%{T-}"
-format-mounted-prefix-foreground = ${theme.pink}
+format-mounted-prefix-foreground = ${dracula/color.pink}
 format-unmounted = <label-unmounted>
 format-unmounted-prefix = "%{T3}%{T-}"
-format-unmounted-prefix-foreground = ${theme.red}
+format-unmounted-prefix-foreground = ${dracula/color.red}
 label-mounted = "%{T3} %free% %percentage_used%%%{T-}"
 label-unmounted = " %mountpoint%: NA"
 
