--- a/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
+++ b/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
@@ -6,8 +6,7 @@
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 
-include-file = $SCRIPTPATH/polybar/modules.config
-include-file = $SCRIPTPATH/polybar/colors.config
+include-file = $SCRIPTPATH/polybar/themes/gruvbox.config
 
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
@@ -19,39 +18,12 @@ margin-bottom = 0
 margin-top = 0
 
 [bar/barbase]
-width = 100% 
-monitor = ${env:monitor}
-offset-x = 0
-offset-y = 0
-height = 24
-fixed-center = true
-bottom = false
-locale = pt_BR.UTF-8
-
-background = ${color.current-line}
-foreground = ${color.foreground}
-
-radius-top = 0.0
-radius-bottom = 2.0
-
-padding = 2
-module-margin-left = 0
-module-margin-right = 0
-
-font-0 = "Fira Code NF:size=11:weight=bold;4"
-font-1 = "Fira Code NF:size=9:weight=bold;4"
-font-2 = "Fira Code NF:size=8:weight=bold;3"
-modules-center = date
-modules-right = network sep memory sep cpu sep filesystem sep temperature sep pulseaudio sep sysmenu 
-
-enable-ipc = true
+inherit = gruvbox/bar 
 
 [settings]
 throttle-output = 5
 throttle-output-for = 10
-
 screenchange-reload = false
-
 compositing-background = source
 compositing-foreground = over
 compositing-overline = over
