--- a/leftwm/.config/leftwm/themes/dracula/theme.toml
+++ b/leftwm/.config/leftwm/themes/dracula/theme.toml
@@ -1,9 +1,11 @@
+#Dracula
+#default_border_color = #bd93f9
+#floating_border_color = "#bd93f9"
+#focused_border_color = "#ff79c6"
+
 border_width = 2
-margin = 4
-workspace_margin = 4
-# default_width = 1280
-# default_height = 720
-# always_float = false
-default_border_color = "#bd93f9"
-floating_border_color = "#bd93f9"
-focused_border_color = "#ff79c6"
+margin = 2
+workspace_margin = 2
+default_border_color = "#ebdbb2"
+floating_border_color = "#fabd2f"
+focused_border_color = "#fabd2f"
