update nvim cfg

--- a/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
+++ b/leftwm/.config/leftwm/themes/dracula/polybar/polybar.config
@@ -6,7 +6,12 @@
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 
-include-file = $SCRIPTPATH/polybar/themes/gruvbox.config
+include-file = $MAINPATH/polybar/modules.config
+include-file = $MAINPATH/polybar/themes.config
+
+[theme]
+; Theme set on up script
+inherit = ${env:THEME} 
 
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
@@ -18,7 +23,30 @@ margin-bottom = 0
 margin-top = 0
 
 [bar/barbase]
-inherit = gruvbox/bar 
+width = 100% 
+monitor = ${env:monitor}
+offset-x = 0
+offset-y = 0
+height = 30
+fixed-center = true
+bottom = false
+locale = pt_BR.UTF-8
+background = ${theme.background_h}
+foreground = ${theme.foreground}
+radius-top = 0.0
+radius-bottom = 2.0
+font-0 = "Fira Code NF:size=9:weight=bold;2"
+font-1 = "Fira Code NF:size=10:weight=bold;2"
+font-2 = "Fira Code NF:size=11:weight=bold;2"
+font-3 = "Fira Code NF:size=12:weight=bold;2"
+font-4 = "Fira Code NF:size=14:weight=bold;2"
+padding = 2
+module-margin-left = 0
+module-margin-right = 0
+modules-left =
+modules-center = date
+modules-right = network sep memory sep cpu sep filesystem sep temperature sep pulseaudio sep sysmenu 
+enable-ipc = true
 
 [settings]
 throttle-output = 5
@@ -41,18 +69,17 @@ tray-detached = true
 tray-offset-y = 0
 ;tray-padding = 15
 ;tray-scale = 1.0
+
 [module/workspace0]
 type = custom/script
-exec = leftwm-state -w 0 -t "$SCRIPTPATH/template.liquid"
+exec = leftwm-state -w 0 -t "$MAINPATH/template.liquid"
 tail = true
 
 [bar/mainbar1]
 inherit = bar/barbase
 modules-left = workspace1
+
 [module/workspace1]
 type = custom/script
-exec = leftwm-state -w 1 -t "$SCRIPTPATH/template.liquid"
+exec = leftwm-state -w 1 -t "$MAINPATH/template.liquid"
 tail = true
-
-
-
