--- a/leftwm/.config/leftwm/themes.toml
+++ b/leftwm/.config/leftwm/themes.toml
@@ -1,6 +1,7 @@
 [[repos]]
 url = "https://raw.githubusercontent.com/leftwm/leftwm-community-themes/master/known.toml"
 name = "community"
+definitions_version = 0
 
 [[repos.themes]]
 name = "Orange Forest"
@@ -174,4 +175,5 @@ current = true
 [[repos]]
 url = "localhost"
 name = "LOCAL"
+definitions_version = 0
 themes = []
