--- a/leftwm/.config/leftwm/themes/dref/polybar/gruvbox/theme.config
+++ b/leftwm/.config/leftwm/themes/dref/polybar/gruvbox/theme.config
@@ -20,11 +20,11 @@ aqua = #689d6a
 gray = #a89984
 orange = #d65d0e
 red_light = #fb4934
-green_light = #b8bb26
+green_l = #b8bb26
 yellow_light = #fabd2f
-blue_light = #83a598
-purple_light = #d3869b
-aqua_light = #8ec07c
-gray_light = #928374
-orange_light = #fe8019
+blue_l = #83a598
+purple_l = #d3869b
+aqua_l = #8ec07c
+gray_l = #928374
+orange_l = #fe8019
 
