--- a/leftwm/.config/leftwm/themes/dref/polybar/gruvbox/polybar.config
+++ b/leftwm/.config/leftwm/themes/dref/polybar/gruvbox/polybar.config
@@ -11,7 +11,7 @@ include-file = theme.config
 
 [theme]
 ; Theme set on up script
-inherit = gruvbox
+inherit = ${env:THEME}
 
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
@@ -22,15 +22,24 @@ margin-bottom = 0
 ; Used for bottom aligned bars
 margin-top = 0
 
-[bar/barbase]
+[settings]
+screenchange-reload = false
+compositing-background = source
+compositing-foreground = over
+compositing-overline = over
+compositing-underline = over
+compositing-border = over
+pseudo-transparency = false
+
+[bar/main]
+monitor = ${env:MONITOR}
 width = 100%
-monitor = ${env:monitor}
 offset-x = 0
 offset-y = 0
 height = 30
 fixed-center = true
 bottom = false
-locale = pt_BR.UTF-8
+locale = ${env:LANG}
 background = ${theme.background_h}
 foreground = ${theme.foreground}
 radius-top = 0.0
@@ -41,43 +50,27 @@ font-2 = "Fira Code NF:size=11:weight=bold;2"
 font-3 = "Fira Code NF:size=12:weight=bold;2"
 font-4 = "Fira Code NF:size=14:weight=bold;2"
 padding = 2
-module-margin-left = 0
-module-margin-right = 0
-modules-left =
-modules-center = date
-modules-right = network sep memory sep cpu sep filesystem sep temperature sep pulseaudio sep sysmenu
+module-margin = 0
+modules-left = ${env:WORKSPACE}
+modules-center = network sep memory sep cpu sep temperature sep filesystem
+modules-right = sep uptime  sep date sep pulseaudio sep sysmenu
 enable-ipc = true
-
-[settings]
-screenchange-reload = false
-compositing-background = source
-compositing-foreground = over
-compositing-overline = over
-compositing-underline = over
-compositing-border = over
-pseudo-transparency = false
-
-[bar/mainbar0]
-inherit = bar/barbase
-modules-left = workspace0
 tray-position = right
-tray-detached = true
-;tray-maxsize = 14
-;tray-offset-x = -100
+tray-detached = false
+tray-maxsize = 16
+tray-background = ${theme.red}
+tray-foreground = ${theme.red}
+tray-offset-x = 0
 tray-offset-y = 0
-;tray-padding = 15
-;tray-scale = 1.0
+tray-padding = 0
+tray-scale = 1.0
 
-[module/workspace0]
-type = custom/script
-exec = leftwm-state -w 0 -t "$MAINPATH/template.liquid"
-tail = true
+;[bar/mainbar0]
+;inherit = bar/barbase
+;modules-left = workspace0
 
-[bar/mainbar1]
-inherit = bar/barbase
-modules-left = workspace1
+;[bar/mainbar1]
+;inherit = bar/barbase
+;modules-left = workspace1
 
-[module/workspace1]
-type = custom/script
-exec = leftwm-state -w 1 -t "$MAINPATH/template.liquid"
-tail = true
+
