--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,10 +4,18 @@ set -s escape-time 0 # Set the escape time to 0 for faster key repetition.
 set -g mouse on # mouse support for tmux
 
 # Keybinds
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+unbind C-Space
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 bind r source-file ~/.config/tmux/tmux.conf # Hot-reloading tmux without restarting.
+
+# Window
+
+# Pane
+bind C-a command-prompt -T window-target -p "#W" { join-pane -t "%%" }
+bind C-h split-pane -h
+bind C-v split-pane -v
+bind C-q confirm-before -p "kill pane #P (y/n)?" kill-pane
 
 set-window-option -g mode-keys vi # Enable vi keys.
 # Vim-like pane switching.
@@ -16,9 +24,11 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
 # Selection
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Set Vi style keybinding in the status line
 set -g status-keys vi
 
