--- a/leftwm/.config/leftwm/themes/dref/theme.toml
+++ b/leftwm/.config/leftwm/themes/dref/theme.toml
@@ -1,12 +1,6 @@
-#Dracula
-#default_border_color = #bd93f9
-#floating_border_color = "#bd93f9"
-#focused_border_color = "#ff79c6"
-
-#Gruvbox
 border_width = 2
+default_border_color = '#3c3836'
+floating_border_color = '#458588'
+focused_border_color = '#fb4934'
 margin = 2
-workspace_margin = 2
-default_border_color = "#ebdbb2"
-floating_border_color = "#fabd2f"
-focused_border_color = "#fabd2f"
+workspace_margin = 6
