--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -114,6 +114,14 @@ label    = %{F#d79921}Uptime: %{F-}%{F#ebdbb2}%output%%{F-}
 tail     = false
 type     = custom/script
 
+[module/update]
+exec     = checkupdates | wc -l
+interval = 3600
+label    = %{T5}%{F#d79921}%{F-}%{T-}%{F#cc241d} %output%%{F-}
+tail     = false
+type     = custom/script
+click-left = notify-send "Available Updates" "$(checkupdates)"
+
 [module/workspace]
 exec = leftwm-state -w $INDEX -t $HOME/.config/leftwm/themes/dref/template.liquid
 tail = true
