--- a/config/polybar/polybar.ini
+++ b/config/polybar/polybar.ini
@@ -17,7 +17,7 @@ locale         = ${env:LANG:pt_BR.UTF8}
 module-margin  = 0
 modules-center = network sep memory sep cpu sep temperature sep filesystem
 modules-left   = workspace
-modules-right  = sep uptime  sep date sep pulseaudio sep sysmenu
+modules-right  = sep update sep uptime  sep date sep pulseaudio sep sysmenu
 monitor        = ${env:monitor}
 offset-x       = 0
 offset-y       = 0
