--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -26,7 +26,7 @@ format-prefix-foreground = ${gruvbox.yellow}
 format-prefix-background = ${gruvbox.background}
 interval                 = 1.0
 label                    = " %time%"
-time                     = %A, %d-%m-%Y %H:%M
+time                     = %a, %d/%m/%y %H:%M
 type                     = internal/date
 
 [module/filesystem]
@@ -119,17 +119,17 @@ warn-temperature      = 75
 
 [module/update]
 exec     = "$polybar/checkupdate"
-interval = 3600
+interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
 format-prefix-foreground = ${gruvbox.yellow}
 format-prefix-background = ${gruvbox.background}
-format-foreground = ${gruvbox.red}
+format-foreground = ${gruvbox.foreground}
 format-background = ${gruvbox.background}
 label    = " %output%"
 tail     = false
 type     = custom/script
-click-left = "$polybar/checkupdate" notify
+click-left = dunstctl history-pop
 
 [module/uptime]
 exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
