--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -39,7 +39,7 @@ modules-right =
 cpu                  = %{T5}%{T-}
 date                 = %{T5}%{T-}
 filesystem           = %{T5}%{T-}
-memory               = %{T5}%{T-}
+memory               = %{T5}%{T-}
 network-connected    = %{T5}ﯲ%{T-}
 network-disconnected = %{T5}%{T-}
 network-loss         = %{T5}ﯳ%{T-}
