--- a/system/getty@tty1.service.d/activate-numlock.conf
+++ b/system/getty@tty1.service.d/activate-numlock.conf
@@ -1,3 +1,2 @@
 [Service]
-ExecStart=
-ExecStart=-/sbin/agetty '-p -- \\u' --nohints --noclear %I $TERM
+ExecStartPre=/bin/sh -c 'setleds -D +num < /dev/%I'
