--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -9,7 +9,6 @@ disabled = true
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 
-
 [aws]
 symbol = " "
 
@@ -99,12 +98,12 @@ conflicted = "⚔️ "
 #ahead = "🏎️ 💨×${count}"
 #behind = "🐢×${count}"
 #diverged = "🔱 🏎️ 💨 ×${ahead_count} 🐢 ×${behind_count}"
-untracked = "🛤️  ×${count}"
-stashed = "📦 "
-modified = "📝×${count}"
-staged = "🗃️ ×${count}"
-renamed = "📛×${count}"
-deleted = "🗑️ ×${count}"
+#untracked = "🛤️  ×${count}"
+#stashed = "📦 "
+#modified = "📝×${count}"
+#staged = "🗃️ ×${count}"
+#renamed = "📛×${count}"
+#deleted = "🗑️ ×${count}"
 style = "bright-white"
 #format = "$all_status $ahead_behind"
 
