--- a/home/.nvidia-settings-rc
+++ b/home/.nvidia-settings-rc
@@ -1,8 +1,8 @@
 #
 # /home/dref/.nvidia-settings-rc
 #
-# Configuration file for nvidia-settings - the NVIDIA X Server Settings utility
-# Generated on Sun Dec 26 04:53:21 2021
+# Configuration file for nvidia-settings - the NVIDIA Settings utility
+# Generated on Wed Oct 26 16:19:08 2022
 #
 
 # ConfigProperties:
@@ -11,11 +11,10 @@ RcFileLocale = C
 DisplayStatusBar = Yes
 SliderTextEntries = Yes
 IncludeDisplayNameInConfigFile = No
-ShowQuitDialog = Yes
 UpdateRulesOnProfileNameChange = Yes
-Timer = PowerMizer_Monitor_(GPU_0),Yes,1000
-Timer = Thermal_Monitor_(GPU_0),Yes,1000
 Timer = Memory_Used_(GPU_0),Yes,3000
+Timer = Thermal_Monitor_(GPU_0),Yes,1000
+Timer = PowerMizer_Monitor_(GPU_0),Yes,1000
 
 # Attributes:
 
@@ -74,3 +73,4 @@ Timer = Memory_Used_(GPU_0),Yes,3000
 [DPY:DP-1]/ColorSpace=0
 [DPY:DP-1]/ColorRange=0
 [DPY:DP-1]/SynchronousPaletteUpdates=0
+[GPU:0]/GPUPowerMizerMode=2
