--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,27 +4,46 @@ set -s escape-time 0 # Set the escape time to 0 for faster key repetition.
 set -g mouse on # mouse support for tmux
 
 # Keybinds
-unbind C-Space
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+#unbind M
+#set-option -g prefix M
+#bind-key send-prefix
 bind r source-file ~/.config/tmux/tmux.conf # Hot-reloading tmux without restarting.
 
 # Pane
-bind a command-prompt -T window-target -p "#W" { join-pane -t "%%" }
-bind h split-pane -h
-bind v split-pane -v
-bind q confirm-before -p "kill pane #P (y/n)?" kill-pane
+bind -n M-a command-prompt -T window-target -p "#W" { join-pane -t "%%" }
+bind -n M-h split-pane -h
+bind -n M-v split-pane -v
+bind -n M-q confirm-before -p "kill pane #P (y/n)?" kill-pane
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-! break-pane
+bind -n M-e select-layout -E
 
+# Window
+bind -n M-0 select-window -t 0
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-C-Down  resize-pane -D 5
+bind -n M-C-Left  resize-pane -L 5
+bind -n M-C-Right resize-pane -R 5
+bind -n M-C-Up    resize-pane -U 5
+bind -n M-F1 next-layout
+bind -n M-c new-window
+bind -n M-p previous-window
+bind -n M-n next-window
+
+
+# Vi
 set-window-option -g mode-keys vi # Enable vi keys.
-# Vim-like pane switching.
-bind -r Left last-window
-bind -r Right next-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
-# Selection
+bind -n M-C-v copy-mode
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
@@ -47,7 +66,7 @@ set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg
 set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
 
 # pane border
-set-option -g pane-active-border-style fg=colour250 #fg2
+set-option -g pane-active-border-style fg=colour160 #fg2
 set-option -g pane-border-style fg=colour237 #bg1
 
 # message infos
