--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -83,7 +83,7 @@ type                     = internal/pulseaudio
 use-ui-max               = false
 
 [module/sep]
-content            = %{T0}%{T-}
+content            = %{T5}%{T-}
 content-foreground = ${gruvbox.yellow}
 content-padding    = 1
 type               = custom/text
@@ -126,7 +126,7 @@ format-prefix-foreground = ${gruvbox.yellow}
 format-prefix-background = ${gruvbox.background}
 format-foreground = ${gruvbox.foreground}
 format-background = ${gruvbox.background}
-label    = " %output%"
+label    = " %output:6%"
 tail     = false
 type     = custom/script
 click-left = dunstctl history-pop
