--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -6,11 +6,11 @@ background     = ${gruvbox.bg2}
 bottom         = false
 enable-ipc     = true
 fixed-center   = true
-font-0         = Fira Code NF:size=9:weight=bold;2
-font-1         = Fira Code NF:size=10:weight=bold;2
-font-2         = Fira Code NF:size=11:weight=bold;2
-font-3         = Fira Code NF:size=12:weight=bold;2
-font-4         = Fira Code NF:size=14:weight=bold;2
+font-0         = Fira Code Nerd Font:size=9:weight=bold;2
+font-1         = Fira Code Nerd Font:size=10:weight=bold;2
+font-2         = Fira Code Nerd Font:size=11:weight=bold;2
+font-3         = Fira Code Nerd Font:size=12:weight=bold;2
+font-4         = Fira Code Nerd Font:size=14:weight=bold;2
 foreground     = ${gruvbox.foreground}
 height         = 30
 locale         = ${env:LANG:pt_BR.UTF8}
@@ -36,23 +36,23 @@ modules-center = workspace date
 modules-right =
 
 [icons]
-cpu                  = %{T5}%{T-}
-date                 = %{T5}%{T-}
-filesystem           = %{T5}%{T-}
-memory               = %{T5}%{T-}
-network-connected    = %{T5}ﯲ%{T-}
-network-disconnected = %{T5}%{T-}
-network-loss         = %{T5}ﯳ%{T-}
-pulseaudio-0         = %{T5}%{T-}
-pulseaudio-1         = %{T5}%{T-}
-pulseaudio-2         = %{T5}%{T-}
-pulseaudio-3         = %{T5}%{T-}
-pulseaudio-mute      = %{T5}ﱝ%{T-}
-sysmenu              = %{T5}襤%{T-}
-temperature-cold     = %{T5}%{F#458588}%{F-}%{T-}
-temperature-hot      = %{T5}%{F#cc241d}%{F-}%{T-}
-temperature-normal   = %{T5}%{F#83a598}%{F-}%{T-}
-update               = %{T5}%{T-}
-uptime               = %{T5}祥%{T-}
+cpu                  = %{T0} %{T-}
+date                 = %{T0} %{T-}
+filesystem           = %{T0} %{T-}
+memory               = %{T0} %{T-}
+network-connected    = %{T0}ﯲ %{T-}
+network-disconnected = %{T0} %{T-}
+network-loss         = %{T0}ﯳ %{T-}
+pulseaudio-0         = %{T0} %{T-}
+pulseaudio-1         = %{T0} %{T-}
+pulseaudio-2         = %{T0} %{T-}
+pulseaudio-3         = %{T0} %{T-}
+pulseaudio-mute      = %{T0}ﱝ %{T-}
+sysmenu              = %{T0}襤%{T-}
+temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
+temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
+temperature-normal   = %{T0}%{F#83a598} %{F-}%{T-}
+update               = %{T0} %{T-}
+uptime               = %{T0}祥 %{T-}
 
 
