Update dot files

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -26,7 +26,7 @@ format-prefix-foreground = ${gruvbox.yellow}
 format-prefix-background = ${gruvbox.background}
 interval                 = 1.0
 label                    = " %time%"
-time                     = %a, %d/%m/%y %H:%M
+time                     = %a, %d/%m/%y %H:%M:%S
 type                     = internal/date
 
 [module/filesystem]
@@ -34,8 +34,8 @@ fixed-values                     = false
 format-mounted                   = <label-mounted>
 format-mounted-prefix            = ${icons.filesystem}
 format-mounted-prefix-foreground = ${gruvbox.orangelight}
-interval                         = 60
-label-mounted                    = %percentage_used:3%% of %total%
+interval                         = 1
+label-mounted                    = %used:3% of %total% (%percentage_used%%)
 mount-0                          = /
 type                             = internal/fs
 warn-percentage                  = 90
@@ -101,14 +101,16 @@ type               = custom/text
 [module/temperature]
 base-temperature      = 30
 format                = <ramp> <label>
+;format-prefix         = ${icons.temperature-normal}
 format-padding        = 1
-format-foreground     = ebdbb2
+format-foreground     = ${gruvbox.blue}
 format-warn           = <ramp> <label-warn>
+format-warn-padding   = 1
 hwmon-path            = ${env:HWMON}
 interval              = 1.0
 label                 = %temperature-c%
 label-warn            = %temperature-c%
-label-warn-foreground =
+label-warn-foreground = ${gruvbox.red}
 ramp-0                = ${icons.temperature-cold}
 ramp-1                = ${icons.temperature-normal}
 ramp-2                = ${icons.temperature-hot}
@@ -149,4 +151,32 @@ type     = custom/script
 exec = leftwm-state -w $index -t $HOME/.config/leftwm/themes/dref/template.liquid
 tail = true
 type = custom/script
+
+[module/vpn]
+exec     = $HOME/.config/polybar/vpn status
+interval = 1
+format-padding = 1
+format-prefix = 
+format-prefix-foreground = ${gruvbox.blue}
+format-prefix-background = ${gruvbox.background}
+format-foreground = ${gruvbox.blue}
+format-background = ${gruvbox.background}
+label    = " %output%"
+tail     = false
+type     = custom/script
+click-left = $HOME/.config/polybar/vpn toggle
+click-right = $HOME/.config/polybar/vpn update_status
+ 
+[module/online]
+exec     = $HOME/.config/polybar/checkonline
+interval = 60
+format-padding = 1
+format-prefix = 
+format-prefix-foreground = ${gruvbox.red}
+format-prefix-background = ${gruvbox.background}
+format-foreground = ${gruvbox.red}
+format-background = 
+label    = " %output%"
+tail     = false
+type     = custom/script
 
