--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -26,6 +26,13 @@ radius-bottom  = 2.0
 radius-top     = 0.0
 width          = 100%
 
+[bar/bottom10]
+inherit = bar/main
+bottom         = true
+modules-left =
+modules-center = vpn
+modules-right =
+
 [bar/main0]
 inherit = bar/main
 
@@ -38,7 +45,7 @@ modules-right =
 [icons]
 cpu                  = %{T0} %{T-}
 date                 = %{T0} %{T-}
-filesystem           = %{T0} %{T-}
+filesystem           = %{T0}  %{T-}
 memory               = %{T0} %{T-}
 network-connected    = %{T0}ﯲ %{T-}
 network-disconnected = %{T0} %{T-}
@@ -50,9 +57,11 @@ pulseaudio-3         = %{T0} %{T-}
 pulseaudio-mute      = %{T0}ﱝ %{T-}
 sysmenu              = %{T0}襤%{T-}
 temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
-temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
 temperature-normal   = %{T0}%{F#83a598} %{F-}%{T-}
+temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
 update               = %{T0} %{T-}
 uptime               = %{T0}祥 %{T-}
+vpnc        	     = %{T0}󰊠 %{T-}
+vpnd                 = %{T0}󰧵 %{T-}
 
 
