--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,6 +3,10 @@ set -g base-index 1 # start index 1 instead of 0.
 set -s escape-time 0 # Set the escape time to 0 for faster key repetition.
 set -g mouse on # mouse support for tmux
 
+# Nvim
+set-option -g focus-events on
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
 # Keybinds
 #unbind M
 #set-option -g prefix M
