update leftwm and polybar config files

--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -46,21 +46,21 @@ modules-right =
 cpu                  = %{T0} %{T-}
 date                 = %{T0} %{T-}
 filesystem           = %{T0}  %{T-}
-memory               = %{T0} %{T-}
-network-connected    = %{T0}ﯲ %{T-}
-network-disconnected = %{T0} %{T-}
-network-loss         = %{T0}ﯳ %{T-}
+memory               = %{T0}󰍛 %{T-}
+network-connected    = %{T0}󰱓 %{T-}
+network-disconnected = %{T0}󰅛 %{T-}
+network-loss         = %{T0}󰛵 %{T-}
 pulseaudio-0         = %{T0} %{T-}
 pulseaudio-1         = %{T0} %{T-}
 pulseaudio-2         = %{T0} %{T-}
 pulseaudio-3         = %{T0} %{T-}
-pulseaudio-mute      = %{T0}ﱝ %{T-}
-sysmenu              = %{T0}襤%{T-}
+pulseaudio-mute      = %{T0}󰝟 %{T-}
+sysmenu              = %{T0}⏻ %{T-}
 temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
-temperature-normal   = %{T0}%{F#83a598} %{F-}%{T-}
+temperature-normal   = %{T0}%{F#83a598}󰏈 %{F-}%{T-}
 temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
 update               = %{T0} %{T-}
-uptime               = %{T0}祥 %{T-}
+uptime               = %{T0}󱎫 %{T-}
 vpnc        	     = %{T0}󰊠 %{T-}
 vpnd                 = %{T0}󰧵 %{T-}
 
