feat: add archupdate to polybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -120,7 +120,7 @@ units                 = true
 warn-temperature      = 75
 
 [module/update]
-exec     = "$polybar/checkupdate"
+exec     = "$polybar/archupdate -n -c"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
@@ -128,7 +128,7 @@ format-prefix-foreground = ${rosepine.yellow}
 format-prefix-background = ${rosepine.background}
 format-foreground = ${rosepine.foreground}
 format-background = ${rosepine.background}
-label    = " %output:6%"
+label    = " %output% Update(s)"
 tail     = false
 type     = custom/script
 click-left = dunstctl history-pop
