fix: archupdate remove crates anyhow and clap

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -120,7 +120,7 @@ units                 = true
 warn-temperature      = 75
 
 [module/update]
-exec     = "$polybar/archupdate -n -c"
+exec     = "$polybar/archupdate"
 interval = 21600
 format-padding = 1
 format-prefix = ${icons.update}
